added DB and redis
